--- a/DSS1_MICE_Obesity.ipynb
+++ b/DSS1_MICE_Obesity.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "## Multiple Imputation by Chained Equations (MICE)\n",
     "\n",
-    "**MICE (Multiple Imputation by Chained Equations)** is Multiple imputation which is recognized as a leading strategy for inserting missing epidemiological data due to its ease of implementation and ability to maintain unbiased effect estimates and valid inferences [(Ref)](https://onlinelibrary.wiley.com/doi/10.1002/sim.8468). So, MICE performs multiple regression for imputing. \n",
+    "**MICE (Multiple Imputation by Chained Equations)** is multiple imputation which is recognized as a leading strategy for inserting missing epidemiological data due to its ease of implementation and ability to maintain unbiased effect estimates and valid inferences [(Ref)](https://onlinelibrary.wiley.com/doi/10.1002/sim.8468). So, MICE performs multiple regression for imputing. \n",
     "\n",
     "MICE is a method of multiple imputation where missing values are filled in several times to create a complete data set. MICE is an imputation method that works with the assumption that the missing data is **Missing at Random (MAR)**. This means that the missing data properties are related to the observed data but not the missing data. So that the imputation process involves information from other observation columns. The MICE algorithm works by running a multiple regression model and each missing value is modeled conditionally depending on the observed (not missing) value.\n",
     "\n",
@@ -1483,7 +1483,7 @@
     "\n",
     "Thus, the idea of MICE becomes a promising alternative to Missing at Random (MAR) data. When compared to statistical methods that only retrieve information from the distribution of values in the missing column, which is capable of displaying a fairly large bias, especially over a wide range of data.\n",
     "\n",
-    "Whereas in the type of missing value MAR, it is known that there is a relationship between columns. So it is very logical if we use the inforamtion of other columns to predict the value. MICE performs regression on the empty column by making the empty column as the target, and the other column as the predictor. As a result, the outcome of the predicted value is close to the actual value.\n",
+    "Whereas in the type of missing value MAR, it is known that there is a relationship between columns. So it is very logical if we use the information of other columns to predict the value. MICE performs regression on the empty column by making the empty column as the target, and the other column as the predictor. As a result, the outcome of the predicted value is close to the actual value.\n",
     "\n",
     "So, through this project, it is proven that the objective of the MICE concept is working properly. Although for some results, the assessment of performance between MICE and statistical methods is not much different. But, it is believed that the accuracy of imputation is to increase with the amount of data and information used. Besides, the stronger the relationship between the columns, the more precise the predicted value will be."
    ]
